--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -4,6 +4,7 @@ header.masthead {
   padding-bottom: calc(10rem - 56px);
   background-image: url('../img/header.jpg');
   background-position: center center;
+  opacity:0.1;
   @include background-cover;
   hr {
     margin-top: 30px;
